test/prism_regression/invalid/multi_assign_to_csend_target.rb
# typed: false

self&.target1, self&.target2 = []
#   ^^ error: &. inside multiple assignment
#                  ^^ error: &. inside multiple assignment
